--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -15,7 +15,7 @@
         <p id="demo"></p>
         <script src="scripts.js"></script>
         <BR></BR>
-        <input type="button" onclick="Hello();" name="ok" value="Click here for a mesage!" />
+        <input type="button" id="message-button" name="ok" value="Click here for a mesage!" />
          
         <h1>Brand New</h1>
         <h2>Genre: Rock/Emo</h2>
@@ -32,12 +32,12 @@
         <p>Brand New is a Rock/Emo band from Long Island, New York that formed in 2000. <BR>They have five studio albums with the most recent came out in August of 2017.</BR></p>
     
             <BR></BR>
-        <button onclick="myFunction()">Hello</button>
+        <button id="hello-button">Hello</button>
 
-<p id="demo-three"></p>
+        <p id="greetingText"></p>
         <form> 
-            <input type="button" onclick="myfunction('Thanks for listening!')" value="Preview song"> 
-            <input type="button" onclick="myfunction('Thanks for your purchase!')" value="Buy album"> 
+            <input type="button" id="previewButton" value="Preview song"> 
+            <input type="button" id="buyButton" value="Buy album"> 
         </form> 
 
         <p id="demo-two"></p>
